--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -2,19 +2,26 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div
+        id="user-data"
+        ngModelGroup="userData"
+        #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
             type="text"
             id="username"
             class="form-control"
-            ngModel="username"
+            ngModel
             name="username"
             required
             >
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button
+          class="btn btn-default"
+          type="button"
+          (click)="suggestUserName()"
+          >Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input
@@ -24,23 +31,60 @@
             ngModel
             name="email"
             required
+            email
+            #email="ngModel"
             >
+            <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email</span>
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User data is invalid</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select
           id="secret"
           class="form-control"
-          ngModel
+          [ngModel]="defaultQuestion"
           name="secret"
           >
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+
+        <div class="form-group">
+          <textarea name="questionAnswer" id="" cols="3" [(ngModel)]="answer" class="form-control"></textarea>
+        </div>
+        <p>Your reply: {{answer}} </p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label for="gender">
+            <input
+            type="radio"
+            name="gender"
+            ngModel
+            [value]="gender"
+            required
+            id="gender"
+            >
+            {{gender}}
+          </label>
+        </div>
+        <button
+        class="btn btn-primary"
+        type="submit"
+        [disabled]="!f.valid"
+        >Submit</button>
       </form>
+    </div>
+  </div>
+  <hr>
+  <div class="row" *ngIf="submitted">
+    <div class="col-xs-12">
+      <h3>Your data</h3>
+      <p>Username: {{user.username}}</p>
+      <p>Email: {{user.email}}</p>
+      <p>Secret Question: {{user.secretQuestion}}</p>
+      <p>Answer: {{user.answer}}</p>
+      <p>Gender: {{user.gender}}</p>
     </div>
   </div>
 </div>
